--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.11.0",
-    "graphql": "^15.0.0",
-    "graphql-iso-date": "^3.6.1"
+    "apollo-server": "^2.15.0",
+    "graphql": "^15.1.0",
+    "graphql-iso-date": "^3.6.1",
+    "npm-check": "^5.9.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
