--- a/habit-tracker/package.json
+++ b/habit-tracker/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.0.0-rc.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "@testing-library/user-event": "^12.0.11",
     "graphql": "^15.1.0",
+    "npm-check": "^5.9.2",
     "react": "^16.13.1",
+    "react-date-picker": "^8.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
